syntax = "proto3";

package ynx.ynx.v1;

option go_package = "github.com/JiahaoAlbus/YNX/chain/x/ynx/types";

import "cosmos_proto/cosmos.proto";

message Params {
  // founder_address receives the protocol fee share (if enabled).
  string founder_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // treasury_address receives protocol-controlled inflows (fee and/or inflation splits).
  string treasury_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // fee_burn_bps is the basis-points share of transaction fees that is burned.
  uint32 fee_burn_bps = 3;

  // fee_treasury_bps is the basis-points share of transaction fees that is sent to treasury_address.
  uint32 fee_treasury_bps = 4;

  // fee_founder_bps is the basis-points share of transaction fees that is sent to founder_address.
  uint32 fee_founder_bps = 5;

  // inflation_treasury_bps is the basis-points share of minted inflation (per-block provision)
  // that is sent to treasury_address before distribution.
  uint32 inflation_treasury_bps = 6;
}
